--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,35 +12,6 @@
 </head>
 <body>
 
-<!-- Following Menu -->
-<div class="ui large top fixed hidden menu">
-    <div class="ui container">
-        <a class="active item">Home</a>
-        <a class="item">Work</a>
-        <a class="item">Company</a>
-        <a class="item">Careers</a>
-        <div class="right menu">
-            <div class="item">
-                <a class="ui button">Log in</a>
-            </div>
-            <div class="item">
-                <a class="ui primary button">Sign Up</a>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- Sidebar Menu -->
-<div class="ui vertical inverted sidebar menu">
-    <a class="active item">Accueil</a>
-    <a class="item">Films</a>
-    <a class="item">Acteurs</a>
-    <a class="item">Contact</a>
-    <a class="item">S'identifier</a>
-    <a class="item">S'inscrire</a>
-</div>
-
-
 <!-- Page Contents -->
 <div class="pusher">
     <div class="ui inverted vertical masthead center aligned segment">
@@ -50,13 +21,13 @@
                 <a class="toc item">
                     <i class="sidebar icon"></i>
                 </a>
-                <a class="active item">Accueil</a>
-                <a class="item">Films</a>
-                <a class="item">Acteurs</a>
+                <a th:href="@{/}" id="accueil" class="active item">Accueil</a>
+                <a  th:href="@{/film_list}" class="item">Films</a>
+                <a th:href="@{/actor_list}" class="item">Acteurs</a>
                 <a class="item">Contact</a>
                 <div class="right item">
-                    <a class="ui inverted button">S'identifier</a>
-                    <a class="ui inverted button">S'inscrire</a>
+                    <a class="ui inverted teal button">S'identifier</a>
+                    <a style="margin-left: 10px;" class="ui inverted teal button">S'inscrire</a>
                 </div>
             </div>
         </div>
@@ -66,7 +37,7 @@
                 CINEMAN
             </h1>
             <h2>“Le cinéma, c’est un oeil ouvert sur le monde.”</h2>
-            <div class="ui huge primary button" ><a th:href="@{/film_list}">Voir les films</a><i class="right arrow icon"></i></div>
+            <div class="ui inverted teal button" ><a th:href="@{/film_list}">Voir les films</a><i class="right arrow icon"></i></div>
         </div>
 
     </div>
