--- a/src/main/resources/templates/person/actor_list.html
+++ b/src/main/resources/templates/person/actor_list.html
@@ -2,36 +2,66 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="webjars/Semantic-UI/2.4.1/semantic.css">     <title>Liste des films</title>
+    <link rel="stylesheet" href="webjars/Semantic-UI/2.4.1/semantic.css">
+    <link href="../static/css/actor_list.css" th:href="@{/css/actor_list.css}" rel="stylesheet">
+
+    <title>Liste des personnes</title>
 </head>
-<body>
-<div class="ui divided items">
-    <div class="item" th:each=" personnes : ${personnes}">
-        <div class="image">
-            <img src="/images/wireframe/image.png">
-        </div>
-        <div class="content">
-           <!-- <a class="header" th:text="personnes.surname">12 Years a Slave</a>-->
-            <div class="meta">
-                <span class="cinema">Union Square 14</span>
+<div>
+
+<!-- Page Contents -->
+<div class="pusher">
+    <div class="ui inverted vertical masthead center aligned segment">
+
+        <div class="ui container">
+            <div class="ui large secondary inverted pointing menu">
+                <a class="toc item">
+                    <i class="sidebar icon"></i>
+                </a>
+                <a th:href="@{/}" class=" item">Accueil</a>
+                <a  th:href="@{/film_list}" class="item">Films</a>
+                <a th:href="@{/actor_list}" id="acteurs" class=" active item">Personnes</a>
+                <a class="item">Contact</a>
+                <div class="right item">
+                    <a class="ui inverted teal button">S'identifier</a>
+                    <a style="margin-left: 10px;" class="ui inverted teal button">S'inscrire</a>
+                </div>
             </div>
-            <div class="description">
-                <p></p>
-            </div>
-            <div class="extra">
-                <div class="ui label">IMAX</div>
-                <div class="ui label"><i class="globe icon"></i> Additional Languages</div>
-            </div>
         </div>
-    </div>
-    <div class="extra">
-        <div class="ui right floated primary button">
-            Voir l'affiche de l'acteur
-            <i class="right chevron icon"></i>
-        </div>
-    </div>
-    </div>
-</body>
+
+
+
+            </div>
+    <h4 class="ui horizontal divider header">
+        <h4 id="separateur-personne" class="ui horizontal divider header">
+            <i class="address book outline icon"></i>
+            Liste des Personnes
+        </h4>
+    </h4>
+</div>
+
+<table class="ui teal table" >
+    <thead>
+    <tr><th>Id</th>
+        <th>Prénom</th>
+        <th>Nom</th>
+        <th>Date de naissance</th>
+        <th>Détail</th>
+    </tr>
+    </thead>
+    <tbody th:each=" personnes : ${personnes}">
+<tr >
+
+    <td th:text="${personnes.id}">200</td>
+    <td th:text="${personnes.givenname}">0g</td>
+    <td th:text="${personnes.surname}">0g</td>
+    <td th:text="${personnes.birthday}">0g</td>
+    <td><button class="ui teal button">Voir la fiche de la personne</button></td>
+</tr>
+
+</tbody>
+</table>
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
