work in progress !!!

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
 -->
     <link rel="stylesheet" href="webjars/Semantic-UI/2.4.1/semantic.css">
     <link href="../static/css/index.css" th:href="@{/css/index.css}" rel="stylesheet">
+    <link href="../static/images/illustration/cineman_favicon.jpg" rel="icon" type="image/jpg" th:href="@{../static/images/illustration/cineman_favicon.jpg}" />
     <title>Cineman</title>
 </head>
 <body>
