--- a/src/main/resources/static/css/actor_list.css
+++ b/src/main/resources/static/css/actor_list.css
@@ -6,5 +6,9 @@
     color:#009C95 !important;
 }
 thead>tr>th{
-    background-color: #E0F2F1 !important;
+      background-color: #E0F2F1 !important;
+  }
+#titre{
+    color:#54FFFF !important;
+    font-size: 30px;
 }
