--- a/src/main/resources/static/css/film_detail.css
+++ b/src/main/resources/static/css/film_detail.css
@@ -10,7 +10,8 @@ and open the template in the editor.
 @import url('https://fonts.googleapis.com/css?family=Permanent+Marker');
 body{
     background-color: #ECEFF1;
-    padding: 20px;
+    font-size: 18px;
+
 
 }
 .segment{
@@ -24,4 +25,20 @@ body{
 }
 h1, h2{
   color: #00695C;  
+}
+img{
+    width: 215px !important;
+    height: 290px !important;
+    margin-left: 90px;
+}
+.content{
+    margin-left: 200px !important;
+    margin-right: 200px !important;
+}
+#genre,#acteur_principaux,i{
+    color:#009C95 !important;
+}
+#titre{
+    color:#54FFFF !important;
+    font-size: 30px;
 }
