--- a/src/main/resources/static/css/film_list.css
+++ b/src/main/resources/static/css/film_list.css
@@ -5,3 +5,10 @@
 #separateur-film{
     color:#009C95 !important;
 }
+thead>tr>th{
+    background-color: #E0F2F1 !important;
+}
+#titre{
+    color:#54FFFF !important;
+    font-size: 30px;
+}
