--- a/src/main/resources/templates/person/actor_detail.html
+++ b/src/main/resources/templates/person/actor_detail.html
@@ -1,44 +1,49 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <link rel="stylesheet" href="webjars/Semantic-UI/2.4.1/semantic.css">    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<div class="ui inverted menu">
-    <a class="item">
-        Accueil
-    </a>
-    <a class=" activeitem">
-        Acteurs
-    </a>
-    <a class="item">
-        Films
-    </a>
-    <a class="item">
-        Ajout de film
-    </a>
-</div>
-<!--fin du nav-->
 
-<body style="background-color: #cccccc">
-<div class="container" style="background-color: white;height: 500px">
-    <!--   <h1>Hello World</h1>-->
-   <div class="bd-example bd-example-images">
-       <figure class="thumbnail" style="padding: 20px;">
-    <img style="width: 161px; height: 217.15px" th:src="@{'/person/photo/'+${person.prenom + person.nom}}" class="rounded float-left" alt="...">
-       </figure>
-    </div>
-    <div class="description" style="margin-top: -40px;">
-   <span style="margin-left: 50px;">Id : </span><q th:text="${person.id}" style="color: #17A2B8"></q><br>
-        <span style="margin-left: 50px;">Prénom : </span><q th:text="${person.prenom}" style="color: #17A2B8"></q><br>
-        <span style="margin-left: 50px;">Nom : </span><q th:text="${person.nom}" style="color: #17A2B8"></q><br>
-        <span style="margin-left: 50px;">Date de naissance : </span><q th:text="${person.naissance}" style="color: #17A2B8"></q>
-    </div>
-</div>
+
 
 <!-- Liens pour les scripts-->
+<head>
+    <link rel="stylesheet" th:href="@{'~/webjars/Semantic-UI/2.4.1/semantic.css'}">
+    <link href="../static/css/actor_detail.css" th:href="@{'~/css/acteur_detail.css'}" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+<div class="pusher">
+    <div class="ui inverted vertical masthead center aligned segment">
+
+        <div class="ui container">
+            <div class="ui large secondary inverted pointing menu">
+                <a class="toc item">
+                    <cite id="titre">CINEMAN</cite>
+                </a>
+                <a th:href="@{/}" class=" item">Accueil</a>
+                <a  th:href="@{/film_list}" class="item">Films</a>
+                <a th:href="@{/actor_list}" id="acteurs" class=" active item">Acteurs</a>
+                <a class="item">Contact</a>
+                <div class="right item">
+                    <a class="ui inverted teal button">S'identifier</a>
+                    <a style="margin-left: 10px;" class="ui inverted teal button">S'inscrire</a>
+                </div>
+            </div>
+        </div>
+
+
+
+    </div>
+    <h4 class="ui horizontal divider header">
+        <h4 id="separateur-personne" class="ui horizontal divider header">
+            <i class="address book outline icon"></i>
+            Détails de la personne
+        </h4>
+    </h4>
+</div>
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
+<!--fin du nav-->
 </html>
