work in progress !!!

--- a/src/main/resources/templates/film.html
+++ b/src/main/resources/templates/film.html
@@ -18,8 +18,7 @@
                         <a class="nav-link" href="#">Acteurs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{'/rechercher'}">Ajout d'un film</a>
-                    </li>
+                        <a th:href="@{/film_form}" class="item">Ajout de films</a>                    </li>
                 </ul>
             </nav>
         </div>
