--- a/src/main/resources/templates/person/actor_list.html
+++ b/src/main/resources/templates/person/actor_list.html
@@ -21,7 +21,7 @@
                 <a th:href="@{/}" class=" item">Accueil</a>
                 <a  th:href="@{/film_list}" class="item">Films</a>
                 <a th:href="@{/actor_list}" id="acteurs" class=" active item">Acteurs</a>
-                <a class="item">Contact</a>
+                <a th:href="@{/film_form}" class="item">Ajout de films</a>
                 <div class="right item">
                     <a class="ui inverted teal button">S'identifier</a>
                     <a style="margin-left: 10px;" class="ui inverted teal button">S'inscrire</a>
