--- a/src/main/resources/templates/film/film_form.html
+++ b/src/main/resources/templates/film/film_form.html
@@ -2,33 +2,72 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="webjars/Semantic-UI/2.4.1/semantic.css">
+    <link href="../static/css/film_form.css" th:href="@{/css/film_form.css}" rel="stylesheet">
 
     <title>Title</title>
 </head>
 <body>
-<div class="pos-f-t">
-    <div class="collapse" id="navbarToggleExternalContent">
-        <div class="bd-exemple">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">Collapsed content
-                <a class="navbar-brand" href="">CINEMAN</a>
-                <div id="navbarColor01">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{'~/person/actor_list'}">Liste des acteurs</a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link" href="#">Liste des Films</a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" >Ajouter un film</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+<div class="ui stackable menu nav_menu">
+
+    <div class="item">
+<!--
+        <img src="../static/images/illustration/movie_icon.jpg" th:src="@{/images/illustration/movie_icon.jpg}">
+-->
+    </div>
+</div>
+<div class="ui grid">
+    <div class="ui vertical menu">
+        <div class="item">
+            <div class="header">Products</div>
+            <div class="menu cine_menu">
+                <a class="item">Enterprise</a>
+                <a class="item">Client</a>
+            </div>
+        </div>
+        <div class="item">
+            <div class="header">CMS Solutions</div>
+            <div class="menu cine_menu ">
+                <a class="item">Rails</a>
+                <a class="item">Python</a>
+                <a class="item">PHP</a>
+            </div>
+        </div>
+        <div class="item">
+            <div class="header">Hosting</div>
+            <div class="menu cine_menu">
+                <a class="item">Partagé</a>
+                <a class="item">Dedicated</a>
+            </div>
+        </div>
+        <div class="item">
+            <div class="header">Support</div>
+            <div class="menu cine_menu">
+                <a class="item">E-mail Support</a>
+                <a class="item">FAQs</a>
+            </div>
         </div>
     </div>
-    <nav class="navbar navbar-dark bg-dark">
+    <div class="twelve wide stretched column">
+        <div class="grid">
+
+            <a class="item titre_ajt_film">Ajouter un film </a>
+
+        </div>
+        <form class="ui form">
+            <h4 class="ui dividing header">Adresse de livraison</h4>
+            <div class="field">
+                <label>Name</label>
+                <div class="two fields">
+                    <div class="field">
+                        <input type="text" class="champtitre" name="shipping[first-name]" placeholder="First Name">
+    </div>
+
+</div>
+
+</div>
+
+   <!-- <nav class="navbar navbar-dark bg-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -98,7 +137,7 @@
         </tbody>
     </table>
 
-</div>
+</div>-->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
