--- a/src/main/resources/templates/film/film_list.html
+++ b/src/main/resources/templates/film/film_list.html
@@ -19,7 +19,7 @@
                 <a th:href="@{/}" class=" item">Accueil</a>
                 <a  th:href="@{/film_list}" id="film" class="active item">Films</a>
                 <a th:href="@{/actor_list}" class="item">Acteurs</a>
-                <a class="item">Contact</a>
+                <a th:href="@{/film_form}" class="item">Ajout de films</a>
                 <div class="right item">
                     <a class="ui inverted teal button">S'identifier</a>
                     <a style="margin-left: 10px;" class="ui inverted teal button">S'inscrire</a>
