--- a/src/main/resources/static/css/film_form.css
+++ b/src/main/resources/static/css/film_form.css
@@ -1,15 +1,33 @@
+body{
+    background-color: #E0F2F1 !important;
+}
+
 .nav_menu{
     background-color: #007F71 !important;
     padding: 5px !important;
+    border-radius: 0 !important;
+}
+.nav_menu>h1{
+    text-align: center !important;
+    color: #E0E0E0 !important;
+    margin-left: 655px !important;
 }
 .cine_menu{
     visibility: hidden !important;
 }
+.down{
+    cursor: pointer;
+
+}
 .item{
     height: 40px !important;
+
+}
+.field>input{
+    padding: 10px !important;
 }
 
-.titre_ajt_film{
+.grid>h1{
     background-color: #00b6a2;
     font-size: 20px;
     padding-left: 110px;
@@ -18,7 +36,21 @@
     padding-bottom: 5px;
     color: #fff;
 }
-.
-champtitre{
-    
+.grid>.ui{
+    background-color: #E0E0E0 !important;
+    border-radius: 0 !important;
+
+}
+.titre{
+    text-align: center !important;
+}
+.champtitre{
+    color: #00B6A2 !important;
+}
+.menu>.item{
+ color: #00B6A2 !important;
+}
+.field>h3{
+    color: #00B6A2 !important;
+    padding: 5px !important;
 }
