--- a/src/main/resources/templates/film/film_form.html
+++ b/src/main/resources/templates/film/film_form.html
@@ -13,34 +13,85 @@
 </div>
 <div class="ui grid">
     <div class="ui vertical menu">
-        <div class="item">
-            <div class="header">Films<a onclick="afficher()"> <i class="angle down icon"></i></a></div>
-            <div class="menu cine_menu" id="menu_lateral">
-                <a class="item">Ajouter un film</a>
-                <a class="item">Liste des films</a>
-                <a class="item">Affiches</a>
-            </div>
-        </div>
-        <div class="item">
-            <div class="header">Genre<a> <i class="angle down icon"></i> </a></div>
-            <div class="menu cine_menu " >
-                <a class="item">Rails</a>
-
-            </div>
-        </div>
-        <div class="item">
-            <div class="header">Role <a><i class="angle down icon" id="flechebas"></i></a></div>
-            <div class="menu cine_menu">
-                <a class="item">Partagé</a>
-
-            </div>
-        </div>
-        <div class="item">
-            <div class="header">Compte utilisateur <a> <i class="angle down icon"></i></a></div>
-            <div class="menu cine_menu">
-                <a class="item">E-mail Support</a>
-                <a class="item">FAQs</a>
-            </div>
+            <div class="ui accordion">
+                <div class="title  transition visible " >
+                    <i class="dropdown icon"></i>
+                    Films
+                </div>
+                <div class="content">
+                    <div class="ui middle aligned animated list transition hidden">
+                        <div class="item">
+                            <div class="content">
+                                <div class="header"><a class="item">Ajouter un film</a></div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="content">
+                                <div class="header"><a class="item">Liste des films</a></div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="content">
+                                <div class="header"><a class="item">Affiches</a></div>
+                            </div>
+                        </div>
+                    </div>    </div>
+                <div class="title  transition visible " >
+                    <i class="dropdown icon"></i>
+                    Genre
+                </div>
+                <div class="content">
+                    <div class="ui middle aligned animated list transition hidden">
+                        <div class="item">
+                            <div class="content">
+                                <div class="header"><a class="item">Ajouter un genre</a></div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="content">
+                                <div class="header"><a class="item">Liste des genre</a></div>
+                            </div>
+                        </div>
+                    </div>    </div>
+                <div class="title  transition visible " >
+                    <i class="dropdown icon"></i>
+                    Role
+                </div>
+                <div class="content">
+                    <div class="ui middle aligned animated list transition hidden">
+                        <div class="item">
+                            <div class="content">
+                                <div class="header"><a class="item">Ajouter un role</a></div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="content">
+                                <div class="header"><a class="item">Liste des roles</a></div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="content">
+                                <div class="header"><a class="item">Photos</a></div>
+                            </div>
+                        </div>
+                    </div>    </div>
+                <div class="title  transition visible " >
+                    <i class="dropdown icon"></i>
+                    Compte utilisateur
+                </div>
+                <div class="content">
+                    <div class="ui middle aligned animated list transition hidden">
+                        <div class="item">
+                            <div class="content">
+                                <div class="header"><a class="item">Inscription</a></div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="content">
+                                <div class="header"><a class="item">Connexion</a></div>
+                            </div>
+                        </div>
+                    </div>    </div>
         </div>
     </div>
     <div class="twelve wide stretched column">
@@ -110,9 +161,19 @@
 </div>
 
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script th:src="@{/js/ajout_film.js}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.js"></script>
+<script>
+    $('.ui.accordion')
+        .accordion()
+    ;
+    $('.trigger.example .accordion')
+        .accordion({
+            selector: {
+                trigger: '.title .icon'
+            }
+        })
+    ;
+</script>
 </body>
 </html>
