Intégration des manager, Work in progress ...

--- a/src/main/resources/templates/film.html
+++ b/src/main/resources/templates/film.html
@@ -24,12 +24,12 @@
         </div>
     </div>
 <!--<tbody>-->
-<!--<tr th:each="personnes : ${personnes}">
-    <td th:text="${personnes.getId()}" style="border: solid 1px #ccc;border-right: solid 1px #ccc"></td>
-    <td th:text="${personnes.getPrenom()}" style="border: solid 1px #ccc">The table body</td>
-    <td th:text="${personnes.getNom()}" style="border: solid 1px #ccc">The table body</td>
-    <td th:text="${personnes.getNaissance()}" style="border: solid 1px #ccc; border-right: solid 1px #ccc">The table body</td>
-    <td th:text="${personnes.getAffiche()}" style="border: solid 1px #ccc;">The table body</td>
+<!--<tr th:each="photos : ${photos}">
+    <td th:text="${photos.getId()}" style="border: solid 1px #ccc;border-right: solid 1px #ccc"></td>
+    <td th:text="${photos.getPrenom()}" style="border: solid 1px #ccc">The table body</td>
+    <td th:text="${photos.getNom()}" style="border: solid 1px #ccc">The table body</td>
+    <td th:text="${photos.getNaissance()}" style="border: solid 1px #ccc; border-right: solid 1px #ccc">The table body</td>
+    <td th:text="${photos.getAffiche()}" style="border: solid 1px #ccc;">The table body</td>
     <td style="border: solid 1px #ccc;"><a th:href="@{'/film'}" type="button" class="btn btn-info">Info</a></td>
 
 </tr>
