Intégration des manager, Work in progress ...

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -17,9 +17,17 @@ body{
     border-bottom-color: #54FFFF !important;
     color:#54FFFF !important;
 }
+
+#gestion{
+    margin-right: -120px;
+}
 #titre{
     color: #ffffff;
 }
 #film\ icon{
     color:#54FFFF !important;
+}
+#h4_gestion{
+    color: #fff;
+    font-size: 10px;
 }
