--- a/src/main/resources/static/css/film_form.css
+++ b/src/main/resources/static/css/film_form.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #E0F2F1 !important;
+    background-color: #fff !important;
 }
 
 .nav_menu{
@@ -19,10 +19,9 @@ body{
     cursor: pointer;
 
 }
-.item{
-    height: 40px !important;
 
-}
+
+
 .field>input{
     padding: 10px !important;
 }
@@ -37,20 +36,46 @@ body{
     color: #fff;
 }
 .grid>.ui{
-    background-color: #E0E0E0 !important;
+    background-color: #fff !important;
     border-radius: 0 !important;
 
 }
 .titre{
     text-align: center !important;
 }
+
+.menu_title{
+    color: #00B6A2;
+}
 .champtitre{
     color: #00B6A2 !important;
 }
-.menu>.item{
- color: #00B6A2 !important;
+
+.item{
+    color:  #757575 !important;;
 }
-.field>h3{
-    color: #00B6A2 !important;
+.item:hover{
+   color: #212121 !important;
+}
+.input_inser_details{
+    color:#757575 !important;
     padding: 5px !important;
+    border-bottom: 1px solid!important;
+    margin-top: 10px !important;
+    font-size: 15px !important;
+}
+.vertical{
+    background-color: #EEEEEE !important;
+}
+.header{
+  color: #00b6a2;
+}
+.input_ajt_film{
+    color: #00B6A2 !important;
+    border-bottom: 1px solid !important;
+    font-size: 18px !important;
+    padding: 5px !important;
+}
+.ui form{
+    margin-top: -150px;
 }
