--- a/src/main/resources/templates/film/film_form.html
+++ b/src/main/resources/templates/film/film_form.html
@@ -8,12 +8,85 @@
     <title>Title</title>
 </head>
 <body>
-<div class="ui stackable menu nav_menu">
- <h1>Gestionnaire</h1>
+<!--<div>
+<div class="ui menu">
+    <a class="browse item active">Cinema <i class="dropdown icon"></i> </a>
 </div>
+    <div class="ui fluid popup top left transition hidden" style="top: auto; left: 1px; bottom: 83px; right: auto; width: 744px;">
+    <div class="ui four column relaxed equal height divided grid">
+        <div class="column">
+            <h4 class="ui header">Films</h4>
+            <div class="ui link list">
+                <a class="item">Rôles</a>
+                <a class="item">Genres</a>
+                <a class="item">Se connecter</a>
+                <a class="item">S'inscire</a>
+            </div>
+        </div>
+        <div class="column">
+            <h4 class="ui header">Taille</h4>
+            <div class="ui link list">
+                <a class="item">Petit</a>
+                <a class="item">Moyen</a>
+                <a class="item">Grand</a>
+                <a class="item">Plus Sizes</a>
+            </div>
+        </div>
+        <div class="column">
+            <h4 class="ui header">Coloré</h4>
+            <div class="ui link list">
+                <a class="item">Neutrals</a>
+                <a class="item">Brights</a>
+                <a class="item">Pastels</a>
+            </div>
+        </div>
+        <div class="column">
+            <h4 class="ui header">Types</h4>
+            <div class="ui link list">
+                <a class="item">Knitwear</a>
+                <a class="item">Outerwear</a>
+                <a class="item">Pants</a>
+                <a class="item">Shoes</a>
+            </div>
+        </div>
+    </div>
+</div>
+    </div>
 <div class="ui grid">
-    <div class="ui vertical menu">
-            <div class="ui accordion">
+<div class="ui vertical menu">
+    <div class="item">
+        <div class="header">Films</div>
+        <div class="menu">
+            <a class="item">Ajouter un film</a>
+            <a class="item">Gérer les films</a>
+            <a class="item">Gérer les affiches</a>
+        </div>
+    </div>
+    <div class="item">
+        <div class="header">Rôles</div>
+        <div class="menu">
+            <a class="item">Ajouter un rôles</a>
+            <a class="item">Gérer les rôles</a>
+
+        </div>
+    </div>
+    <div class="item">
+        <div class="header">Genres</div>
+        <div class="menu">
+            <a class="item">Ajouter un genre</a>
+            <a class="item">Gérer les genres</a>
+        </div>
+    </div>
+    <div class="item">
+        <div class="header">Utilisateurs</div>
+        <div class="menu">
+            <a class="item">Admin</a>
+            <a class="item">Clients</a>
+        </div>
+    </div>
+</div>-->
+
+            <!--<div class="ui accordion">
                 <div class="title  transition visible " >
                     <i class="dropdown icon"></i>
                     Films
@@ -74,8 +147,8 @@
                                 <div class="header"><a class="item">Photos</a></div>
                             </div>
                         </div>
-                    </div>    </div>
-                <div class="title  transition visible " >
+                    </div>    </div>-->
+          <!--      <div class="title  transition visible " >
                     <i class="dropdown icon"></i>
                     Compte utilisateur
                 </div>
@@ -93,17 +166,36 @@
                         </div>
                     </div>    </div>
         </div>
-    </div>
-    <div class="twelve wide stretched column">
 
-        <form class="ui form">
-            <div class="grid">
+    <div class="twelve wide stretched column">-->
 
-                <h1 class="item titre_ajt_film titre">Ajouter un film </h1>
+        <div class="grid">
 
+            <h1 class="ui dividing header input_ajt_film">Ajouter un film</h1>
+            <h2 class="ui dividing header input_inser_details">Inserer les détails du film</h2>
+        </div>
+       <!--<form class="ui form"  action="#"
+              class="ui form"
+              id="film-form"
+              method="post"
+              th:action="@{/film/add}"
+              th:object="${film}">
+            <div class="two fields">
+                <div class="field">
+                    <label>Titre</label>
+                    <input placeholder="titre ..." name="name" type="text">
+                </div>
+                <div class="field">
+                    <label>Note</label>
+                    <input type="number">
+                </div>
+                <label>Résumé</label>
+                <textarea form="film-form" rows="5" th:field="*{summary}"></textarea>
             </div>
-            <div class="field">
-                <h3 class="ui dividing header">Inserer les détails du film</h3>
+            <input class="ui button" type="submit" value="Valider">
+
+        </form>-->
+        <!--<div class="field">
                 <label>Titre</label>
                 <div class="two fields">
 
@@ -156,13 +248,15 @@
                     <button class="ui teal button">Ajouter</button>
             </div>
             </div>
-        </form>
+        </form>&ndash;&gt;-->
     </div>
+</div>
 </div>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
 <script>
     $('.ui.accordion')
         .accordion()
@@ -175,5 +269,14 @@
         })
     ;
 </script>
+<script type="application/javascript">
+    $('#menu-films').addClass("active");
+    $('.ui.dropdown').dropdown();
+    $(document).ready(function () {
+        tinymce.init({
+            selector: '#summary'
+        });
+    })
+            </script>
 </body>
 </html>
